--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
         body.dark-mode .loading-dots span{ background-color: #9575cd;}
 
         /* --- Toggle Switch Styles --- */
-        .switch { position: relative; display: inline-block; width: 60px; height: 34px; margin-bottom: 1rem; }
+        .switch { position: relative; display: inline-block; width: 60px; height: 34px; margin-bottom: 0; vertical-align: middle; /* Align vertically */ }
         .switch input { opacity: 0; width: 0; height: 0; }
         .slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; transition: .4s; border-radius: 34px; }
         .slider:before { position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: white; transition: .4s; border-radius: 50%; }
         input:checked + .slider { background-color: #673ab7; }
         input:focus + .slider { box-shadow: 0 0 1px #673ab7; }
         input:checked + .slider:before { transform: translateX(26px); }
+
 
         /* Nav Bar Styles */
         #nav-links {
@@ -87,13 +88,15 @@
 
         #nav-links li {
             margin-left: 15px; /* Spacing between items */
+             display: flex; /* Make the links flex containers */
+           align-items: center; /* Center items vertically within the link */
         }
 
         #nav-links a {
-           display: flex; /* Make the links flex containers */
-           align-items: center; /* Center items vertically within the link */
            color: white;
            text-decoration: none;
+           display: flex;
+           align-items: center;
 
         }
         #nav-links span.material-icons{
@@ -107,7 +110,7 @@
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo center">AI Chat</a>
             <!-- Added id="nav-links" and the links -->
-             <ul id="nav-links" class="right">
+            <ul id="nav-links" class="right">
                 <li><a href="#about"><span class="material-icons">info</span>About</a></li>
                 <li><a href="#features"><span class="material-icons">settings</span>Features</a></li>
                 <li><a href="#gallery"><span class="material-icons">photo_library</span>Gallery</a></li>
